unpackaged/main/default/objects/QS_Track__c/QS_Track__c.object-meta.xml
<CustomObject>
    <label>Track</label>
    <nameField>
        <label>Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>