unpackaged/main/default/objects/QS_Track__c/fields/QS_Accomplishments_This_Week__c.field-meta.xml
<CustomField>
    <fullName>QS_Accomplishments_This_Week__c</fullName>
    <inlineHelpText>List out any accomplishments made this week by the business.</inlineHelpText>
    <label>Accomplishments This Week</label>
    <type>TextArea</type>
</CustomField>