unpackaged/main/default/objects/QS_Track__c/fields/QS_Active_Track__c.field-meta.xml
<CustomField>
    <fullName>QS_Active_Track__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the track is actively used for the BOSS project</description>
    <inlineHelpText>Indicates that the track is actively used for the BOSS project</inlineHelpText>
    <label>Active Track?</label>
    <type>Checkbox</type>
</CustomField>