unpackaged/main/default/objects/QS_Track__c/fields/QS_Consultant_Comments__c.field-meta.xml
<CustomField>
    <fullName>QS_Consultant_Comments__c</fullName>
    <inlineHelpText>Comments from the consultant team regarding the track</inlineHelpText>
    <label>Consultant Comments</label>
    <type>TextArea</type>
</CustomField>