unpackaged/main/default/objects/QS_Track__c/fields/QS_Consultant_Partner_Owner__c.field-meta.xml
<CustomField>
    <fullName>QS_Consultant_Partner_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The consultant or partner lead for the track.</inlineHelpText>
    <label>Consultant/Partner Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>