unpackaged/main/default/objects/QS_Track__c/fields/QS_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>QS_Dependencies__c</fullName>
    <label>Dependencies / Blockers</label>
    <type>TextArea</type>
</CustomField>