unpackaged/main/default/objects/QS_Track__c/fields/QS_Focus_Areas_for_Next_Week__c.field-meta.xml
<CustomField>
    <fullName>QS_Focus_Areas_for_Next_Week__c</fullName>
    <label>Focus Areas for Next Week</label>
    <type>TextArea</type>
</CustomField>