unpackaged/main/default/objects/QS_Track__c/fields/QS_Key_Deliverables_Upcoming_Milestones__c.field-meta.xml
<CustomField>
    <fullName>QS_Key_Deliverables_Upcoming_Milestones__c</fullName>
    <inlineHelpText>List any key deliverables and upcoming milestones</inlineHelpText>
    <label>Key Deliverables and Upcoming Milestones</label>
    <type>TextArea</type>
</CustomField>