unpackaged/main/default/objects/QS_Track__c/fields/QS_KeyObjectives__c.field-meta.xml
<CustomField>
    <fullName>QS_KeyObjectives__c</fullName>
    <inlineHelpText>Max of 5 objectives per track</inlineHelpText>
    <label>Key Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>