unpackaged/main/default/objects/QS_Track__c/fields/QS_Overall_Comments__c.field-meta.xml
<CustomField>
    <fullName>QS_Overall_Comments__c</fullName>
    <label>Overall Comments</label>
    <type>TextArea</type>
</CustomField>