unpackaged/main/default/objects/QS_Track__c/fields/QS_Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>QS_Overall_Status__c</fullName>
    <description>Red - Guaranteed risk that deliverables will be missed, late
Yellow - Deliverables are behind schedule, but there is a clear plan to mitigate risk
Green - On schedule, little or limited risk</description>
    <inlineHelpText>Red - Guaranteed risk that deliverables will be missed, late
Yellow - Deliverables are behind schedule, but there is a clear plan to mitigate risk
Green - On schedule, little or limited risk</inlineHelpText>
    <label>Overall Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>