unpackaged/main/default/objects/QS_Track__c/fields/QS_Requirement_Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Requirement_Cutoff_Date__c</fullName>
    <label>Requirement Cutoff Date</label>
    <type>Date</type>
</CustomField>