unpackaged/main/default/objects/QS_Track__c/fields/QS_Resource_Comments__c.field-meta.xml
<CustomField>
    <fullName>QS_Resource_Comments__c</fullName>
    <label>Resource Comments</label>
    <type>TextArea</type>
</CustomField>