unpackaged/main/default/objects/QS_Track__c/fields/QS_Risks_Comments__c.field-meta.xml
<CustomField>
    <fullName>QS_Risks_Comments__c</fullName>
    <label>Risks Comments</label>
    <type>TextArea</type>
</CustomField>