unpackaged/main/default/objects/QS_Track__c/fields/QS_Schedule_Comments__c.field-meta.xml
<CustomField>
    <fullName>QS_Schedule_Comments__c</fullName>
    <label>Schedule Comments</label>
    <type>TextArea</type>
</CustomField>