unpackaged/main/default/objects/QS_Track__c/fields/QS_Testing__c.field-meta.xml
<CustomField>
    <fullName>QS_Testing__c</fullName>
    <formula>IMAGE( 
CASE(QS_Testing_Status__c, 
&quot;Green&quot;, &quot;/img/msg_icons/confirm16.png&quot;, 
&quot;Yellow&quot;, &quot;/img/msg_icons/warning16.png&quot;, 
&quot;Red&quot;, &quot;/img/msg_icons/error16.png&quot;, 
&quot;/s.gif&quot;), 
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Testing</label>
    <type>Text</type>
</CustomField>