unpackaged/main/default/objects/QS_Track__c/fields/QS_Testing_Comments__c.field-meta.xml
<CustomField>
    <fullName>QS_Testing_Comments__c</fullName>
    <label>Testing Comments</label>
    <type>TextArea</type>
</CustomField>