unpackaged/main/default/objects/QS_Track__c/fields/QS_Track_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>QS_Track_Display_Order__c</fullName>
    <description>Track display order, intended to approximate the overall End-to-End process flow sort Order, used for various reporting format purposes.</description>
    <inlineHelpText>Track display order, intended to approximate the overall End-to-End process flow sort Order, used for various reporting format purposes.</inlineHelpText>
    <label>Track Display Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>