unpackaged/main/default/objects/QS_Track__c/fields/QS_Track_External_Id__c.field-meta.xml
<CustomField>
    <fullName>QS_Track_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Track External Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>