unpackaged/main/default/objects/QS_Track__c/fields/QS_Track_Goals__c.field-meta.xml
<CustomField>
    <fullName>QS_Track_Goals__c</fullName>
    <label>Success Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>