unpackaged/main/default/objects/QS_Track__c/fields/QS_Track_Lead__c.field-meta.xml
<CustomField>
    <fullName>QS_Track_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Track Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tracks1</relationshipName>
    <type>Lookup</type>
</CustomField>