unpackaged/main/default/objects/QS_Track__c/fields/QS_VCG_Consultant__c.field-meta.xml
<CustomField>
    <fullName>QS_VCG_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VCG Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tracks2</relationshipName>
    <type>Lookup</type>
</CustomField>