unpackaged/main/default/objects/QS_Track__c/validationRules/Specific_users_can_update_reqcutoff_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Specific_users_can_update_reqcutoff_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED(QS_Requirement_Cutoff_Date__c) ,  $User.QS_Create_Change_Request_Reqs__c = FALSE)</errorConditionFormula>
    <errorMessage>Only specific users can change Track Req Cutoff Date</errorMessage>
</ValidationRule>