unpackaged/main/default/objects/QS_Track__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QS_Active_Track__c</columns>
    <columns>QS_Overall__c</columns>
    <columns>QS_Track_Lead__c</columns>
    <columns>QS_Consultant_Partner_Owner__c</columns>
    <columns>QS_Overall_Comments__c</columns>
    <columns>QS_Overall_Status__c</columns>
    <columns>QS_Track_Display_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>