unpackaged/main/default/objects/QS_Track__c/listViews/QS_Active_Tracks.listView-meta.xml
<ListView>
    <fullName>QS_Active_Tracks</fullName>
    <columns>NAME</columns>
    <columns>QS_Overall__c</columns>
    <columns>QS_Track_Lead__c</columns>
    <columns>QS_VCG_Consultant__c</columns>
    <columns>QS_Consultant_Partner_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Active_Track__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Tracks</label>
</ListView>